overflow fixed

--- a/main.css
+++ b/main.css
@@ -238,3 +238,6 @@ form .btnempezar{
 .formulario-resultado h2{
     padding: 3em 0 0 0;
 }
+html{
+    overflow-x: hidden;
+}
